--- a/index.html
+++ b/index.html
@@ -88,16 +88,37 @@
                             <div class="right_part">
                                 <div class="dash_12"></div>
                                 <span class="arrow_up_1">
-                                    <i class="fa-solid fa-chevron-down"></i>
+                                    <i class="fa-solid fa-chevron-up"></i>
                                 </span>
                                 <img src="./asset folder/icon2/customs-1 1.png" alt="" class="custom_png_icon">
                                 <div class="dash_13"></div>
-                                <img src="./asset folder/icon2/Frame (1).png" alt="" class="frame1_icon">
+                                <img src="./asset folder/icon2/customs-2 1.png" alt="" class="custom2_icon">
                                 <div class="dash_14"></div>
                                 <span class="arrow_up_2">
-                                    <i class="fa-solid fa-chevron-down"></i>
+                                    <i class="fa-solid fa-chevron-up"></i>
                                 </span>
                             </div>
+                        </div>
+                        <div class="fourth_part">
+                            <div class="dash_15"></div>
+                            <img src="./asset folder/icon2/border-control-3 2.png" alt="" class="border_control_icon2">
+                            <div class="dash_16"></div>
+                            <span class="arrow_right_3">
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </span>
+                            <img src="./asset folder/icon2/flight-departing 2.png" alt="" class="flight_depart_icon">
+                            <span class="arrow_right_4">
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </span>
+                            <img src="./asset folder/icon2/arrived 2.png" alt="" class="arrived_icon">
+                            <span class="arrow_right_5">
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </span>
+                            <img src="./asset folder/icon2/welcome_home.png" alt="" class="welcome_icon">
+                            <div class="dash_17"></div>
+                            <span class="arrow_up_3">
+                                <i class="fa-solid fa-chevron-up"></i>
+                            </span>
                         </div>
                         
                     </div>
