--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                 <h4>Solving for congestion at Pearson</h4>
                 <span><i class="fas fa-plus"></i></span>
             </div>
+            <div class="learn_more">
+                <h5>Tap on icon to learn more.</h5>
+                <h6>Tap off screen phone to close</h6>
+            </div>
             <div class="hero_content">
 
                 <div class="main_content">
@@ -256,7 +260,9 @@
                         <p>Help clear <br> your path for <br> a smoother <br> journey through <br> the airport.</p>
                     </div>
                 </div>
-
+                <div class="scroll_more">
+                    <small><b>Scroll for more <i class="fa-solid fa-chevron-right"></i></b></small>
+                </div>
             </div>
 
         </div>
