--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
                     <div class="centered_content">
                         <p>
-                            Steps the <br> industry is taking <br> to improve <br> passenger flow <br> at the airport
+                            Steps the <br> industry is taking <br> to improve <br> passenger flow <br> at the airport.
                         </p>
                     </div>
                     <div class="centered_content_md_screen">
