--- a/index.html
+++ b/index.html
@@ -124,9 +124,10 @@
                                 <div class="mytooltip1">
                                     <img src="./asset folder/icon/customs-3 2.png" alt="" class="clearing_entry_icon">
                                     <span class="mytooltiptext3">
-                                        <small class="mytooltip_header1">Canadian Customs<div class="small_orange">
-                                            </div>
+                                        <small class="mytooltip_header1">Canadian Customs
                                             <div class="small_green"></div>
+                                            <div class="small_orange"></div>
+
                                         </small>
                                         <div class="mytooltip_content1">
                                             <p><strong>What's new: </strong>Additional kiosks and eGates. Additional
