--- a/index2.html
+++ b/index2.html
@@ -8,17 +8,18 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/mdb.min.css">
     <link rel="stylesheet" href="./css/all.min.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/tooltip.css">
+    <link rel="stylesheet" href="./css/style2.css">
+    <link rel="stylesheet" href="./css/tooltip2.css">
 </head>
 
 <body>
+
 
     <main id="hero">
         <div class="bg_left"></div>
         <div class="container">
             <div class="header_top">
-                <h4>Solving for congestion at Pearson</h4>
+                <h4>A Better Trip through Pearson</h4>
                 <span><i class="fas fa-plus"></i></span>
             </div>
             <div class="learn_more">
@@ -58,12 +59,6 @@
 
                                 </span>
                             </div>
-                            <span class="arrow_left_2">
-                                <i class="fa-solid fa-chevron-left"></i>
-                            </span>
-                            <span class="arrow_left_3">
-                                <i class="fa-solid fa-chevron-left"></i>
-                            </span>
 
                         </div>
                         <div class="second_part">
@@ -78,14 +73,9 @@
                                 <div class="mytooltip1">
                                     <img src="./asset folder/icon/check-in 2.png" alt="" class="checking_icon">
                                     <span class="mytooltiptext2">
-                                        <small class="mytooltip_header1">Check-in<div class="small_orange"></div>
-                                        </small>
+                                        <small class="mytooltip_header1">Check-in</small>
                                         <div class="mytooltip_content1">
-                                            <p><strong>What's new: </strong>Improved automation to upload vaccine and
-                                                health documentation. Airport publishing peak hour traffic so travellers
-                                                can better time departures.</p>
-                                            <p><strong>What's next: </strong>Airport to publish live wait times for
-                                                check-in and security clearance</p>
+                                            <p><strong>Check in at home online and consider using AirTags or other tech for luggage. If your bag is delayed or misplaced. contact your airline.</p> 
                                         </div>
 
                                     </span>
@@ -98,16 +88,9 @@
                                 <div class="mytooltip1">
                                     <img src="./asset folder/icon/all_clear_icon.png" alt="" class="all_clear_icon">
                                     <span class="mytooltiptext1">
-                                        <small class="mytooltip_header1">Security<div class="small_orange"></div>
-                                        </small>
+                                        <small class="mytooltip_header1">Security</small>
                                         <div class="mytooltip_content1">
-                                            <p><strong>What's new: </strong>More Catsa screening officers. Revamped
-                                                airport signage to
-                                                prepare
-                                                travellers for security screening.</p>
-                                            <p><strong>What's next: </strong>Airport to publish live wait times for
-                                                check-in and security
-                                                clearance.
+                                            <p>Pre-Order Uber Eats while you wait and pick up/enjoy your meal after passing through security. </p>
                                             </p>
                                         </div>
 
@@ -123,42 +106,16 @@
                                     <img src="./asset folder/icon/customs-3 2.png" alt="" class="clearing_entry_icon">
                                     <span class="mytooltiptext3">
                                         <small class="mytooltip_header1">Canadian Customs
-                                            <div class="small_green"></div>
-                                            <div class="small_orange"></div>
-
                                         </small>
                                         <div class="mytooltip_content1">
-                                            <p><strong>What's new: </strong>Additional kiosks and eGates. Additional
-                                                CBSA staff, including summer students. Introduced Advanced Declaration
-                                                to allow travellers to complete their customs declaration prior to
-                                                arrival.</p>
-                                            <p><strong>What's next: </strong>More digitization of border processes and
-                                                ArriveCAN app, including the removal of duplicative health questions</p>
+                                            <p>Get home faster by completing your Advanced Declaration and ArriveCAN before arriving at Pearson. </p>
                                         </div>
 
                                     </span>
                                 </div>
 
                                 <div class="dash_7"></div>
-                                <span class="arrow_right_2">
-                                    <i class="fa-solid fa-chevron-right"></i>
-                                </span>
-                                <div class="mytooltip1">
-                                    <img src="./asset folder/icon2/covid_icon.png" alt="" class="covid_icon">
-                                    <span class="mytooltiptext4">
-                                        <small class="mytooltip_header1">Random Testing<div class="small_orange">
-                                            </div>
-                                        </small>
-                                        <div class="mytooltip_content1">
-                                            <p><strong>What's new: </strong>Suspension of mandatory random COVID testing
-                                                at airport to mid-July.</p>
-                                            <p><strong>What's next: </strong>More digitization of processes while random
-                                                testing , identification of passengers to be tested, and notification to
-                                                the passenger off airport</p>
-                                        </div>
-
-                                    </span>
-                                </div>
+                                
                                 <div class="dash_8"></div>
                             </div>
 
@@ -252,11 +209,8 @@
 
                     <div class="centered_content">
                         <p>
-                            Steps the <br> industry is taking <br> to improve <br> passenger flow <br> at the airport.
+                            Help Clear <br> your path for <br> a smoother <br> journey through <br> the airport.
                         </p>
-                    </div>
-                    <div class="centered_content_md_screen">
-                        <p>Help clear <br> your path for <br> a smoother <br> journey through <br> the airport.</p>
                     </div>
                 </div>
                 <div class="scroll_more">
