--- a/index2.html
+++ b/index2.html
@@ -153,16 +153,10 @@
                                 <img src="./asset folder/icon2/border-control-3 2.png" alt=""
                                     class="border_control_icon2">
                                 <span class="mytooltiptext5">
-                                    <small class="mytooltip_header1">U.S. Border-Control<div class="small_pink">
-                                        </div>
+                                    <small class="mytooltip_header1">U.S. Border Control
                                     </small>
                                     <div class="mytooltip_content1">
-                                        <p><strong>What's new: </strong>Additional U.S. Customs officers are now onsite
-                                            to accelarate customs processing.</p>
-                                        <p><strong>What's next: </strong>Return U.S. Customs and Border Protection
-                                            staffing to pre-pandemic levels to improve customs processing and expand
-                                            operational hours. Encourage U.S. and Canadian governments to reopen NEXUS
-                                            enrollment centers and clear back-log of trusted traveller application.</p>
+                                        <p>U.S. citizens, remember that you have a dedicated line!</p>
                                     </div>
 
                                 </span>
@@ -176,24 +170,27 @@
                             <span class="arrow_right_4">
                                 <i class="fa-solid fa-chevron-right"></i>
                             </span>
-                            <img src="./asset folder/icon2/arrived 2.png" alt="" class="arrived_icon">
+                            <div class="mytooltip1">
+                                
+                                <img src="./asset folder/icon2/arrived 2.png" alt="" class="arrived_icon">
+                                <span class="mytooltiptext8">
+                                    <small class="mytooltip_header1">Leaving for Canada
+                                    </small>
+                                    <div class="mytooltip_content1">
+                                        <p>U.S. citizens, remember that you have a dedicated line!</p>
+                                    </div>
+
+                                </span>
+                            </div>
                             <span class="arrow_right_5">
                                 <i class="fa-solid fa-chevron-right"></i>
                             </span>
                             <div class="mytooltip1">
                                 <img src="./asset folder/icon2/welcome_home.png" alt="" class="welcome_icon">
                                 <span class="mytooltiptext6">
-                                    <small class="mytooltip_header1">U.S. Border-Control<div class="small_green">
-                                        </div>
-                                        <div class="small_orange"></div>
                                     </small>
                                     <div class="mytooltip_content1">
-                                        <p><strong>What's new: </strong>Additional U.S. Customs officers are now onsite
-                                            to accelarate customs processing.</p>
-                                        <p><strong>What's next: </strong>Return U.S. Customs and Border Protection
-                                            staffing to pre-pandemic levels to improve customs processing and expand
-                                            operational hours. Encourage U.S. and Canadian governments to reopen NEXUS
-                                            enrollment centers and clear back-log of trusted traveller application.</p>
+                                        <p>Upon your arrival it's important to remember that some health checks remain: Customs officials will verify your ArriveCAN compliance. Partially vaccinatedor unvaccinated individuals must quarantine for 14 days. </p>
                                     </div>
 
                                 </span>
