--- a/index2.html
+++ b/index2.html
@@ -36,7 +36,17 @@
 
                     <div class="icons">
                         <div class="first_part">
-                            <img src="./asset folder/icon/home.png" alt="" class="home_icon ">
+                            <div class="mytooltip1">
+                                <img src="./asset folder/icon/home.png" alt="" class="home_icon ">
+                                <span class="mytooltiptext9">
+                                    <small class="mytooltip_header1"> <strong>Start at home</strong></small>
+                                    <div class="mytooltip_content1">
+                                        <p>Check our Travel information Hub at torontopearson.com/travelhub and learn more about wait times through our Airport Status dashboard at LINK </p>
+                                    </div>
+
+                                </span>
+                            </div>
+                            
                             <span class="arrow_left_1">
                                 <i class="fa-solid fa-chevron-left"></i>
                             </span>
@@ -45,16 +55,9 @@
                             <div class="mytooltip1">
                                 <img src="./asset folder/icon/baggage 2.png" alt="" class="baggage_icon">
                                 <span class="mytooltiptext7">
-                                    <small class="mytooltip_header1">Baggage<div class="small_yellow"></div>
-                                        <div class="small_green"></div>
-                                    </small>
+                                    <small class="mytooltip_header1"> <strong>Baggage</strong></small>
                                     <div class="mytooltip_content1">
-                                        <p><strong>What's new: </strong>Additional U.S. Customs officers are now onsite
-                                            to accelarate customs processing.</p>
-                                        <p><strong>What's next: </strong>Return U.S. Customs and Border Protection
-                                            staffing to pre-pandemic levels to improve customs processing and expand
-                                            operational hours. Encourage U.S. and Canadian governments to reopen NEXUS
-                                            enrollment centers and clear back-log of trusted traveller application.</p>
+                                        <p>Skip baggage carousal by using carry-on luggage. </p>
                                     </div>
 
                                 </span>
@@ -73,9 +76,9 @@
                                 <div class="mytooltip1">
                                     <img src="./asset folder/icon/check-in 2.png" alt="" class="checking_icon">
                                     <span class="mytooltiptext2">
-                                        <small class="mytooltip_header1">Check-in</small>
+                                        <small class="mytooltip_header1"><strong> Check-in</strong></small>
                                         <div class="mytooltip_content1">
-                                            <p><strong>Check in at home online and consider using AirTags or other tech for luggage. If your bag is delayed or misplaced. contact your airline.</p> 
+                                            <p>Check in at home online and consider using AirTags or other tech for luggage. If your bag is delayed or misplaced. contact your airline.</p> 
                                         </div>
 
                                     </span>
@@ -88,7 +91,7 @@
                                 <div class="mytooltip1">
                                     <img src="./asset folder/icon/all_clear_icon.png" alt="" class="all_clear_icon">
                                     <span class="mytooltiptext1">
-                                        <small class="mytooltip_header1">Security</small>
+                                        <small class="mytooltip_header1"><strong>Security</strong> </small>
                                         <div class="mytooltip_content1">
                                             <p>Pre-Order Uber Eats while you wait and pick up/enjoy your meal after passing through security. </p>
                                             </p>
@@ -105,7 +108,7 @@
                                 <div class="mytooltip1">
                                     <img src="./asset folder/icon/customs-3 2.png" alt="" class="clearing_entry_icon">
                                     <span class="mytooltiptext3">
-                                        <small class="mytooltip_header1">Canadian Customs
+                                        <small class="mytooltip_header1">  <strong>Canadian Customs</strong>
                                         </small>
                                         <div class="mytooltip_content1">
                                             <p>Get home faster by completing your Advanced Declaration and ArriveCAN before arriving at Pearson. </p>
@@ -177,7 +180,7 @@
                                     <small class="mytooltip_header1">Leaving for Canada
                                     </small>
                                     <div class="mytooltip_content1">
-                                        <p>U.S. citizens, remember that you have a dedicated line!</p>
+                                        <p>If you're an international traveller, make sure you've downloaded and filled out ArriveCAN before flying by visiting http://www.canada.ca/en/border/border-services-agency/arrivecan.html. Make sure you fill out Advance Declaration after submitting your ArriveCAN information. To do so, just follow the prompt on your ArriveCAN receipt page.</p>
                                     </div>
 
                                 </span>
