--- a/index.html
+++ b/index.html
@@ -19,7 +19,42 @@
         <div class="container">
             <div class="header_top">
                 <h4>Solving for congestion at Pearson</h4>
-                <span><i class="fas fa-plus"></i></span>
+                <div class="show_nav">
+                    <div class="show_nav_content">
+                        <div class="">
+                            <img src="./asset folder/icon2/Frame (1).png" alt="">
+                            <small>Domestic Flights</small>
+                        </div>
+                        <div class="">
+                            <img src="./asset folder/icon2/Vector (3).png" alt="">
+                            <small>USA Flights</small>
+                        </div>
+                        <div class="">
+                            <img src="./asset folder/icon2/Frame.png" alt="">
+                            <small>International Fights</small>
+                        </div>
+                    </div>
+                    <div class="colors">
+                        <div>
+                            <div class="big_yellow"></div>
+                            <small>Airline</small>
+                        </div>
+                        <div>
+                            <div class="big_green"></div>
+                            <small>Airport</small>
+                        </div>
+                        <div>
+                            <div class="big_orange"></div>
+                            <small>Federal Government</small>
+                        </div>
+                        <div>
+                            <div class="big_pink"></div>
+                            <small>U.S. Government</small>
+                        </div>
+                    </div>
+                    
+                </div>
+                <span class="toggler_icon"><i class="fas fa-plus"></i></span>
             </div>
             <div class="learn_more">
                 <h5>Tap on icon to learn more.</h5>
@@ -274,6 +309,7 @@
 
     <script src="./js/all.min.js"></script>
     <script src="./js/mdb.min.js"></script>
+    <script src="./js/toggler.js"></script>
 
     </script>
 </body>
