--- a/index2.html
+++ b/index2.html
@@ -93,7 +93,7 @@
                                 <span class="mytooltiptext7">
                                     <small class="mytooltip_header1"> <strong>Baggage</strong></small>
                                     <div class="mytooltip_content1">
-                                        <p>Skip baggage carousal by using carry-on luggage. </p>
+                                        <p>Skip baggage carousel by using carry-on luggage. </p>
                                     </div>
 
                                 </span>
