--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <small>U.S. Government</small>
                         </div>
                     </div>
-                    
+
                 </div>
                 <span class="toggler_icon"><i class="fas fa-plus"></i></span>
             </div>
@@ -107,6 +107,9 @@
                                 <div class="dash_3"></div>
                                 <span class="arrow_left_4">
                                     <i class="fa-solid fa-chevron-left"></i>
+                                </span>
+                                <span class="arrow_down_unknown">
+                                    <i class="fa-solid fa-chevron-down"></i>
                                 </span>
 
                                 <div class="dash_4"></div>
@@ -198,6 +201,8 @@
                             </div>
 
                         </div>
+
+                        <!-- Thirs part -->
 
                         <div class="third_part">
                             <div class="left_part">
