--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                                     <i class="fa-solid fa-chevron-right"></i>
                                 </span>
                                 <div class="mytooltip1">
-                                    <img src="./asset folder/icon2/covid_icon.png" alt="" class="covid_icon">
+                                    <img src="./asset folder/icon2/Icons_Callouts_V2-02.png" alt="" class="covid_icon">
                                     <span class="mytooltiptext4">
                                         <small class="mytooltip_header1">Random Testing<div class="small_orange">
                                             </div>
