--- a/index.html
+++ b/index.html
@@ -208,6 +208,8 @@
                             <div class="left_part">
                                 <img src="./asset folder/icon2/going_abroad_cross_country.png" alt=""
                                     class="going_abroad_icon">
+                                <div class="dash_abroad_unknown"></div>
+                                <div class="dash_border_unknown"></div>
                                 <div class="dash_9"></div>
                                 <span class="arrow_down_1">
                                     <i class="fa-solid fa-chevron-down"></i>
